--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "start": "yarn setup && node ./dist/index.js"
   },
   "dependencies": {
+    "redux": "^4.0.5",
+    "redux-observable": "^1.2.0",
     "rxjs": "^6.6.3"
   },
   "devDependencies": {
